--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintLeft_toLeftOf="parent"
+       android:padding="20dp"
+       android:orientation="vertical">
+
+       <TextView
+           android:id="@+id/txtView"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="Firebase Value"
+           android:textSize="25sp"
+           android:layout_marginBottom="10dp"
+           />
+
+       <EditText
+           android:id="@+id/txtTest"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:hint="Test push data"
+           android:layout_marginTop="30dp"
+           android:layout_marginBottom="20dp"/>
+
+       <Button
+           android:id="@+id/btnSend"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="Send"/>
+
+
+   </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
