--- a/app/src/main/res/drawable/border_btn.xml
+++ b/app/src/main/res/drawable/border_btn.xml
@@ -4,6 +4,5 @@
     <corners android:radius="10dp" />
     <stroke
         android:width="2dp"
-        android:color="#ddd"/>
-    <solid android:color="#fff" />
+        android:color="#1877f2" />
 </shape>
