--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,12 @@
            android:layout_height="wrap_content"
            android:text="Send"/>
 
+       <Button
+           android:id="@+id/btnLogout"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="Logout"/>
+
 
    </LinearLayout>
 
