--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/Theme.MaterialComponents"
     tools:context=".MainActivity">
 
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       app:layout_constraintTop_toTopOf="parent"
-       app:layout_constraintLeft_toLeftOf="parent"
-       android:padding="20dp"
-       android:orientation="vertical">
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-       <TextView
-           android:id="@+id/txtView"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="Firebase Value"
-           android:textSize="25sp"
-           android:layout_marginBottom="10dp"
-           />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#8294f3" />
 
-       <EditText
-           android:id="@+id/txtTest"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:hint="Test push data"
-           android:layout_marginTop="30dp"
-           android:layout_marginBottom="20dp"/>
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:id="@+id/bottom_appbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:backgroundTint="#fff"
+            app:fabCradleMargin="7dp"
+            app:fabCradleRoundedCornerRadius="50dp">
 
-       <Button
-           android:id="@+id/btnSend"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="Send"/>
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottom_nav"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:menu="@menu/bottom_nav"
+                app:itemIconTint="#000"
+                app:itemTextColor="#000"
+                android:background="@android:color/transparent"
+                app:labelVisibilityMode="labeled"
+                android:layout_marginEnd="10dp"
 
-       <Button
-           android:id="@+id/btnLogout"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="Logout"/>
+                />
 
+        </com.google.android.material.bottomappbar.BottomAppBar>
 
-   </LinearLayout>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#fff"
+            android:src="@drawable/bx_user"
+            app:layout_anchor="@id/bottom_appbar"
+            android:contentDescription="TODO" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
+        app:itemIconTint="#e30019"
+        app:menu="@menu/nav_menu"
+        tools:layout_editor_absoluteY="8dp" />
+
+</androidx.drawerlayout.widget.DrawerLayout>
