--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -54,6 +54,7 @@
                         android:text="Email"
                         android:textStyle="bold"
                         android:textSize="18sp"
+                        android:textColor="#000"
                         android:layout_marginBottom="5dp"/>
 
                     <EditText
@@ -80,6 +81,7 @@
                         android:text="Mật khẩu"
                         android:textStyle="bold"
                         android:textSize="18sp"
+                        android:textColor="#000"
                         android:layout_marginBottom="5dp"/>
 
                     <EditText
@@ -106,6 +108,7 @@
                         android:text="Nhập lại mật khẩu"
                         android:textStyle="bold"
                         android:textSize="18sp"
+                        android:textColor="#000"
                         android:layout_marginBottom="5dp"/>
 
                     <EditText
@@ -141,7 +144,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Đã có tài khoản?"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp"
+                    android:textColor="#000"/>
 
                 <TextView
                     android:id="@+id/toLogin"
