--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+
     <style name="ToolbarTitleTextAppearance">
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#000</item>
     </style>
 
     <style name="Button">
         <item name="android:background">@drawable/custom_btn</item>
         <item name="android:textSize">18sp</item>
         <item name="android:padding">10dp</item>
+        <item name="android:textColor">#fff</item>
     </style>
 
     <style name="EditText">
@@ -17,5 +21,6 @@
         <item name="android:padding">15dp</item>
         <item name="android:backgroundTint">@null</item>
         <item name="android:maxLines">1</item>
+        <item name="android:textColorHint">#a9a8aa</item>
     </style>
 </resources>
