--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menu_home"
-        android:icon="@drawable/reader_outline"
+        android:icon="@drawable/icon_reader_outline"
         android:iconTint="#fff"
         android:title="Todo" />
 
     <item android:id="@+id/menu_dashboard"
-        android:icon="@drawable/reader_outline"
+        android:icon="@drawable/icon_reader_outline"
         android:title="Calendar"
         app:showAsAction="always"/>
 
     <item android:id="@+id/menu_account"
-        android:icon="@drawable/reader_outline"
+        android:icon="@drawable/icon_reader_outline"
         android:iconTint="#fff"
         android:title="Account" />
 </menu>
