--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,50 +8,57 @@
     android:theme="@style/Theme.MaterialComponents"
     tools:context=".MainActivity">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <FrameLayout
-            android:id="@+id/frame_layout"
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#8294f3" />
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/bottom_nav">
 
-        <com.google.android.material.bottomappbar.BottomAppBar
-            android:id="@+id/bottom_appbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:backgroundTint="@color/white"
-            app:fabCradleMargin="8dp"
-            app:fabCradleRoundedCornerRadius="50dp">
+            <FrameLayout
+                android:id="@+id/frame_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#8294f3" />
 
-            <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/bottom_nav"
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/btnAddFloating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:menu="@menu/bottom_nav"
-                app:itemIconTint="@color/black"
-                app:itemTextColor="@color/black"
-                android:background="@android:color/transparent"
-                app:labelVisibilityMode="labeled"
-                android:layout_marginEnd="18dp" />
+                android:layout_gravity="bottom|end"
+                android:backgroundTint="#5f27e7"
+                app:tint="@color/white"
+                android:src="@drawable/icon_add_outline"
+                app:maxImageSize="30dp"
+                android:layout_marginBottom="15dp"
+                android:layout_marginEnd="10dp"
+                android:contentDescription="@string/todo" />
 
-        </com.google.android.material.bottomappbar.BottomAppBar>
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/btnAddFloating"
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:background="@drawable/shadow"
+            app:layout_constraintBottom_toTopOf="@+id/bottom_nav"/>
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_nav"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#5f27e7"
-            app:tint="@color/white"
-            android:src="@drawable/icon_add_outline"
-            app:maxImageSize="30dp"
-            app:layout_anchor="@id/bottom_appbar"
-            android:contentDescription="@string/todo" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:menu="@menu/bottom_nav"
+            app:itemIconTint="@color/black"
+            app:itemTextColor="@color/black"
+            android:background="@color/white"
+            app:labelVisibilityMode="labeled" />
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation"
