--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -4,15 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragment.TodoFragment">
+    tools:context=".fragments.TodoFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#f9ffff"
-        android:paddingBottom="30dp">
+        android:background="#f9ffff">
 
         <HorizontalScrollView
+            android:id="@+id/horizontal_categories"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -35,7 +35,7 @@
                     android:text="Danh mục 1"
                     android:textSize="12sp"
                     android:textColor="#676d74"
-                    android:background="@drawable/category_btn_bg"
+                    android:background="@drawable/btn_bg_category"
                     app:backgroundTint="@null" />
 
 
@@ -49,7 +49,7 @@
                     android:text="Danh mục 1"
                     android:textColor="#676d74"
                     android:textSize="12sp"
-                    android:background="@drawable/category_btn_bg"
+                    android:background="@drawable/btn_bg_category"
                     app:backgroundTint="@null" />
 
                 <Button
@@ -62,7 +62,7 @@
                     android:text="Danh mục 1"
                     android:textSize="12sp"
                     android:textColor="#676d74"
-                    android:background="@drawable/category_btn_bg"
+                    android:background="@drawable/btn_bg_category"
                     app:backgroundTint="@null" />
 
 
@@ -75,7 +75,7 @@
                     android:text="Danh mục 1"
                     android:textSize="12sp"
                     android:textColor="#676d74"
-                    android:background="@drawable/category_btn_bg"
+                    android:background="@drawable/btn_bg_category"
                     app:backgroundTint="@null" />
 
 
@@ -88,7 +88,7 @@
                     android:text="Danh mục 1"
                     android:textSize="12sp"
                     android:textColor="#676d74"
-                    android:background="@drawable/category_btn_bg"
+                    android:background="@drawable/btn_bg_category"
                     app:backgroundTint="@null" />
 
 
@@ -101,13 +101,24 @@
                     android:text="Danh mục 1"
                     android:textSize="12sp"
                     android:textColor="#676d74"
-                    android:background="@drawable/category_btn_bg"
+                    android:background="@drawable/btn_bg_category"
                     app:backgroundTint="@null" />
 
 
             </LinearLayout>
 
         </HorizontalScrollView>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/todo_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/horizontal_categories"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="20dp"
+            android:paddingHorizontal="15dp">
+
+        </androidx.recyclerview.widget.RecyclerView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
