--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="categoryBtn">#e0eefd</color>
     <color name="categoryBtnActive">#7dabf5</color>
-
+    <color name="overlayColor">#80000000</color>
 </resources>
