--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="Button">
-        <item name="android:background">@drawable/custom_btn</item>
+        <item name="android:background">@drawable/btn_border_only</item>
         <item name="android:textSize">18sp</item>
         <item name="android:padding">10dp</item>
         <item name="android:textColor">#fff</item>
@@ -17,10 +17,26 @@
 
     <style name="EditText">
         <item name="android:textSize">18sp</item>
-        <item name="android:background">@drawable/custom_edit_text</item>
+        <item name="android:background">@drawable/edit_text_bg</item>
         <item name="android:padding">15dp</item>
         <item name="android:backgroundTint">@null</item>
         <item name="android:maxLines">1</item>
         <item name="android:textColorHint">#a9a8aa</item>
     </style>
+
+    <style name="EditTextNoBorder">
+        <item name="android:textSize">18sp</item>
+        <item name="android:background">@drawable/edit_text_bg_no_border</item>
+        <item name="android:padding">18dp</item>
+        <item name="android:backgroundTint">@null</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textColorHint">#a9a8aa</item>
+    </style>
+
+    <style name="PopupHeader">
+        <item name="android:textSize">19sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="color">@color/black</item>
+    </style>
+
 </resources>
