--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,20 +6,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:mode="same_level"
     app:dragEdge="right"
-    android:layout_marginBottom="10dp"
-    android:layout_gravity="center_horizontal">
+    android:layout_marginBottom="7dp"
+    android:layout_gravity="center_horizontal"
+    android:background="@drawable/bg_list_item_radius">
 
     <!-- Secondary layout here -->
     <LinearLayout
-        android:id="@+id/layout_delete"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:orientation="horizontal">
+        android:layout_height="62dp">
 
-        <TextView
-            android:layout_width="60dp"
+        <ImageView
+            android:id="@+id/btn_edit"
+            android:layout_width="62dp"
             android:layout_height="match_parent"
-            android:text="Delete"/>
+            android:src="@drawable/icon_bxs_edit"
+            android:scaleType="centerCrop"
+            android:contentDescription="@string/todo"
+            android:background="@color/lightBlue"
+            android:padding="20dp"/>
+
+        <ImageView
+            android:id="@+id/btn_delete"
+            android:layout_width="62dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/icon_bx_trash"
+            android:scaleType="centerCrop"
+            android:contentDescription="@string/todo"
+            android:background="@color/red"
+            android:padding="20dp"/>
 
     </LinearLayout>
 
@@ -30,22 +44,40 @@
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingHorizontal="8dp"
-        android:paddingVertical="6dp"
+        android:paddingVertical="10dp"
         android:background="@drawable/bg_list_item">
 
         <CheckBox
             android:id="@+id/ckbox_complete"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="40dp"
+            android:layout_marginEnd="5dp"/>
 
-        <TextView
-            android:id="@+id/tv_todo"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:text="@string/app_name"
-            android:textSize="19sp" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_todo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="15dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="@string/app_name"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tv_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
+                android:text="@string/app_name"
+                android:textSize="13sp"
+                android:textColor="#aaa"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
