--- a/app/src/main/res/layout/popup_create_todo.xml
+++ b/app/src/main/res/layout/popup_create_todo.xml
@@ -16,11 +16,12 @@
         <LinearLayout
             android:id="@+id/blurViewContent"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="190dp"
             android:layout_gravity="bottom"
             android:background="@drawable/bg_create_todo_popup"
             android:orientation="vertical"
-            android:padding="20dp">
+            android:paddingHorizontal="20dp"
+            android:paddingTop="20dp">
 
             <TextView
                 android:layout_width="match_parent"
@@ -42,30 +43,58 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp">
+                android:layout_marginTop="8dp">
 
                 <Spinner
                     android:id="@+id/category_spinner"
-                    android:layout_width="150dp"
+                    android:layout_width="140dp"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     android:background="@drawable/spinner_bg"
-                    android:layout_marginTop="6dp"
+                    android:layout_marginTop="5dp"
                     android:paddingHorizontal="15dp"
                     android:paddingVertical="0dp" />
 
                 <ImageButton
                     android:id="@+id/btn_add_category"
-                    android:layout_width="46dp"
-                    android:layout_height="46dp"
-                    android:src="@drawable/icon_add_outline_black"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:src="@drawable/icon_add_outline"
                     android:scaleType="fitCenter"
                     app:layout_constraintLeft_toRightOf="@+id/category_spinner"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginStart="10dp"
-                    android:contentDescription="@string/app_name" />
+                    android:layout_marginStart="6dp"
+                    android:contentDescription="@string/app_name"
+                    android:backgroundTint="@color/lightBlue"/>
+
+                <ImageView
+                    android:id="@+id/btn_set_time"
+                    android:layout_width="45dp"
+                    android:layout_height="35dp"
+                    android:src="@drawable/icon_bx_time_five"
+                    android:scaleType="fitCenter"
+                    app:layout_constraintLeft_toRightOf="@+id/btn_add_category"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginStart="15dp"
+                    android:contentDescription="@string/app_name"
+                    android:backgroundTint="@android:color/transparent" />
+
+                <ImageButton
+                    android:id="@+id/btn_create_todo"
+                    android:layout_width="55dp"
+                    android:layout_height="55dp"
+                    android:src="@drawable/icon_bx_check"
+                    android:scaleType="fitCenter"
+                    android:padding="8dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:layout_marginStart="6dp"
+                    android:contentDescription="@string/app_name"
+                    android:background="@drawable/bg_circle"
+                    android:backgroundTint="@color/lightBlue_1"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
