--- a/app/src/main/res/drawable/bg_radius_right.xml
+++ b/app/src/main/res/drawable/bg_radius_right.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#EDFCFF" />
-    <corners android:topLeftRadius="6dp" android:bottomLeftRadius="6dp" />
+    <corners android:topRightRadius="6dp" android:bottomRightRadius="6dp" />
 </shape>
