--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -11,110 +11,38 @@
         android:layout_height="match_parent"
         android:background="#f9ffff">
 
-        <HorizontalScrollView
-            android:id="@+id/horizontal_categories"
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/categories_shimmer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:paddingTop="13dp"
-            android:scrollbars="none">
+            app:layout_constraintLeft_toLeftOf="parent">
+            <include layout="@layout/horizon_category_placeholder" />
+        </com.facebook.shimmer.ShimmerFrameLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/horizon_category_rcview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="12dp"
+            android:paddingHorizontal="15dp"/>
 
-                <Button
-                    android:id="@+id/cate1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="32dp"
-                    android:paddingHorizontal="15dp"
-                    android:paddingVertical="0dp"
-                    android:layout_margin="8dp"
-                    android:text="Danh mục 1"
-                    android:textSize="12sp"
-                    android:textColor="#676d74"
-                    android:background="@drawable/btn_bg_category"
-                    app:backgroundTint="@null" />
-
-
-                <Button
-                    android:id="@+id/cate2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="32dp"
-                    android:layout_margin="8dp"
-                    android:paddingHorizontal="15dp"
-                    android:paddingVertical="0dp"
-                    android:text="Danh mục 1"
-                    android:textColor="#676d74"
-                    android:textSize="12sp"
-                    android:background="@drawable/btn_bg_category"
-                    app:backgroundTint="@null" />
-
-                <Button
-                    android:id="@+id/cate3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="32dp"
-                    android:paddingHorizontal="15dp"
-                    android:paddingVertical="0dp"
-                    android:layout_margin="8dp"
-                    android:text="Danh mục 1"
-                    android:textSize="12sp"
-                    android:textColor="#676d74"
-                    android:background="@drawable/btn_bg_category"
-                    app:backgroundTint="@null" />
-
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="32dp"
-                    android:paddingHorizontal="15dp"
-                    android:paddingVertical="0dp"
-                    android:layout_margin="8dp"
-                    android:text="Danh mục 1"
-                    android:textSize="12sp"
-                    android:textColor="#676d74"
-                    android:background="@drawable/btn_bg_category"
-                    app:backgroundTint="@null" />
-
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="32dp"
-                    android:paddingHorizontal="15dp"
-                    android:paddingVertical="0dp"
-                    android:layout_margin="8dp"
-                    android:text="Danh mục 1"
-                    android:textSize="12sp"
-                    android:textColor="#676d74"
-                    android:background="@drawable/btn_bg_category"
-                    app:backgroundTint="@null" />
-
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="32dp"
-                    android:paddingHorizontal="15dp"
-                    android:paddingVertical="0dp"
-                    android:layout_margin="8dp"
-                    android:text="Danh mục 1"
-                    android:textSize="12sp"
-                    android:textColor="#676d74"
-                    android:background="@drawable/btn_bg_category"
-                    app:backgroundTint="@null" />
-
-
-            </LinearLayout>
-
-        </HorizontalScrollView>
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/todo_shimmer"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/horizon_category_rcview"
+            app:layout_constraintBottom_toBottomOf="parent">
+            <include layout="@layout/list_item_placeholder" />
+        </com.facebook.shimmer.ShimmerFrameLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/todo_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/horizontal_categories"
+            app:layout_constraintTop_toBottomOf="@+id/horizon_category_rcview"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="20dp"
             android:paddingHorizontal="15dp">
