--- a/app/src/main/res/layout/popup_create_category.xml
+++ b/app/src/main/res/layout/popup_create_category.xml
@@ -29,6 +29,42 @@
                 android:text="@string/them_danh_muc"
                 style="@style/PopupHeader"/>
 
+            <EditText
+                android:id="@+id/category_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/ten_danh_muc"
+                style="@style/EditTextNoBorder"
+                android:padding="20dp"
+                android:textSize="17sp"
+                android:inputType="text"
+                android:layout_marginTop="10dp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal"
+                android:gravity="end">
+
+                <Button
+                    android:id="@+id/btn_cancel_create_category"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:text="@string/huy"
+                    android:background="@drawable/btn_cancel"
+                    app:backgroundTint="@null" />
+                <Button
+                    android:id="@+id/btn_create_category"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/them_moi"
+                    android:background="@drawable/btn_crate"
+                    app:backgroundTint="@null" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
