--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
-                android:backgroundTint="#5f27e7"
+                android:backgroundTint="#7dabf5"
                 app:tint="@color/white"
                 android:src="@drawable/icon_add_outline"
                 app:maxImageSize="30dp"
@@ -53,8 +53,8 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:menu="@menu/bottom_nav"
-            app:itemIconTint="@color/black"
-            app:itemTextColor="@color/black"
+            app:itemIconTint="@color/bottom_nav_item_color"
+            app:itemTextColor="@color/bottom_nav_item_color"
             android:background="@color/white"
             app:labelVisibilityMode="labeled" />
 
@@ -66,8 +66,12 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:backgroundTint="@color/white"
-        app:itemIconTint="#e30019"
         app:menu="@menu/nav_menu"
-        tools:layout_editor_absoluteY="8dp" />
+        app:itemTextColor="@color/black"
+        app:itemIconTint="#236EF1"
+        app:itemTextAppearance="@style/NavText"
+        app:itemIconSize="23dp"
+        app:itemIconPadding="20dp"
+        app:headerLayout="@layout/navigation_header" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
