--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -41,6 +41,28 @@
             <include layout="@layout/list_item_placeholder" />
         </com.facebook.shimmer.ShimmerFrameLayout>
 
+        <LinearLayout
+            android:id="@+id/todo_empty"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/categories_shimmer"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:padding="20dp"
+            android:gravity="center"
+            android:layout_marginTop="-60dp"
+            android:orientation="vertical">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/todo_empty"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-80dp"
+                android:text="Không có gì ở dây cả..."
+                android:textSize="16sp"/>
+        </LinearLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/todo_recycler_view"
             android:layout_width="match_parent"
