--- a/app/src/main/res/layout/list_item_placeholder.xml
+++ b/app/src/main/res/layout/list_item_placeholder.xml
@@ -175,4 +175,72 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginBottom="20dp">
+
+        <View
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_list_item_radius"
+            android:backgroundTint="@color/placeholder"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginLeft="15dp">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="27dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:background="@drawable/bg_list_item_radius"
+                android:backgroundTint="@color/placeholder"/>
+            <View
+                android:layout_width="180dp"
+                android:layout_height="27dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:background="@drawable/bg_list_item_radius"
+                android:backgroundTint="@color/placeholder"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginBottom="20dp">
+
+        <View
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_list_item_radius"
+            android:backgroundTint="@color/placeholder"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginLeft="15dp">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="27dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:background="@drawable/bg_list_item_radius"
+                android:backgroundTint="@color/placeholder"/>
+            <View
+                android:layout_width="180dp"
+                android:layout_height="27dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:background="@drawable/bg_list_item_radius"
+                android:backgroundTint="@color/placeholder"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
+
 </LinearLayout>
