--- a/app/src/main/res/layout/activity_update_todo.xml
+++ b/app/src/main/res/layout/activity_update_todo.xml
@@ -21,26 +21,177 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:paddingHorizontal="15dp"
         android:orientation="vertical">
 
-        <Spinner
-            android:id="@+id/cagories_spinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
         <EditText
+            android:id="@+id/txt_todo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
-            android:layout_marginBottom="50dp"
-            android:maxLines="3"
+            android:layout_marginBottom="15dp"
+            android:maxLines="2"
             android:ellipsize="end"
             android:background="@drawable/edit_text_bg_blank"
-            android:text="@{todo.title}"
+            android:text="@string/todo"
+            android:hint="Tên công việc"
             android:textSize="20sp"
             android:textStyle="bold"/>
+
+        <EditText
+            android:id="@+id/txt_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            android:maxLines="4"
+            android:ellipsize="end"
+            android:background="@drawable/edit_text_bg_blank"
+            android:hint="Mô tả"
+            android:textSize="15sp"
+            android:textColor="@color/gray"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:paddingVertical="10dp">
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/icon_bx_grid_alt"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Danh mục"
+                    android:layout_marginStart="10dp"
+                    android:textSize="15sp"
+                    android:textColor="@color/gray"/>
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"/>
+                <Spinner
+                    android:id="@+id/cagories_spinner"
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:paddingHorizontal="15dp"
+                    android:popupBackground="@drawable/bg_list_item"
+                    android:background="@drawable/spinner_bg_arrow"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:paddingVertical="10dp">
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/icon_bx_calendar"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Ngày đến hạn"
+                    android:layout_marginStart="10dp"
+                    android:textSize="15sp"
+                    android:textColor="@color/gray"/>
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:id="@+id/change_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/btn_update_todo"
+                    app:backgroundTint="@null"
+                    android:text="01/01/2024"
+                    android:textSize="14sp"
+                    android:textColor="@color/gray"
+                    android:textAlignment="center"
+                    android:paddingHorizontal="13dp"
+                    android:paddingVertical="5dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:paddingVertical="10dp">
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/icon_bx_time_five"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Thời gian đến hạn"
+                    android:layout_marginStart="10dp"
+                    android:textSize="15sp"
+                    android:textColor="@color/gray"/>
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:id="@+id/change_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/btn_update_todo"
+                    app:backgroundTint="@null"
+                    android:text="00:00 AM"
+                    android:textSize="14sp"
+                    android:textColor="@color/gray"
+                    android:textAlignment="center"
+                    android:paddingHorizontal="13dp"
+                    android:paddingVertical="5dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:paddingVertical="10dp">
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/icon_bx_bell"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Thời gian thông báo"
+                    android:layout_marginStart="10dp"
+                    android:textSize="15sp"
+                    android:textColor="@color/gray"/>
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:id="@+id/change_time_notify"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/btn_update_todo"
+                    app:backgroundTint="@null"
+                    android:text="00:00 AM"
+                    android:textSize="14sp"
+                    android:textColor="@color/gray"
+                    android:textAlignment="center"
+                    android:paddingHorizontal="13dp"
+                    android:paddingVertical="5dp"/>
+            </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
